--- a/install.txt
+++ b/install.txt
@@ -23,10 +23,11 @@ These instructions are for a manual installation using FTP, cPanel or other web 
 
 3. Для Linux/Unix убедитесь, что папки и файлы доступны для записи.
 
-		chmod 0755 или 0777 system/cache/
-		chmod 0755 или 0777 system/logs/
-		chmod 0755 или 0777 system/download/
-		chmod 0755 или 0777 system/upload/
+		chmod 0755 или 0777 system/storage/cache/
+		chmod 0755 или 0777 system/storage/logs/
+		chmod 0755 или 0777 system/storage/download/
+		chmod 0755 или 0777 system/storage/upload/
+		chmod 0755 или 0777 system/storage/modification/
 		chmod 0755 или 0777 image/
 		chmod 0755 или 0777 image/cache/
 		chmod 0755 или 0777 image/catalog/
@@ -53,10 +54,11 @@ These instructions are for a manual installation using FTP, cPanel or other web 
 
 3. Для Windows убедитесь, что папки и файлы доступны для записи
 
-		system/cache/
-		system/logs/
-		system/download/
-		system/upload/
+		system/storage/cache/
+		system/storage/logs/
+		system/storage/download/
+		system/storage/upload/
+		system/storage/modification/
 		image/
 		image/cache/
 		image/catalog/
@@ -81,3 +83,8 @@ http://www.ampps.com/
 http://www.usbwebserver.net
 http://www.wampserver.com/
 http://www.denwer.ru/
+Видеоурок по установке denwer https://www.youtube.com/watch?v=wQUjBVJGTnk
+
+
+
+
